@@ -1,5 +1,6 @@
+ - Don't use strcasecmp() (not portable)
  - Remove sysinfo.h and class System (not portable)
- - Don't include <unistd.h>, <sys/utsname.h>
+ - Don't include <unistd.h>, <sys/utsname.h> (not portable)
  - Change ::show() --> ::disp() everywhere
  - Clean out old quadrature classes on triangles and tetrahedra
  - Clean out old sparse matrix code
